@@ -1,4 +1,8 @@
-﻿shmuel 29.10.2014 18:14:31 +0200 - build 441
+﻿shmuel 30.10.2014 22:51:40 +0200 - build 442
+
+1. LuaFAR (generic plugin): рефакторинг.
+
+shmuel 29.10.2014 18:14:31 +0200 - build 441
 
 1. Команды macro:post и lm:post больше не поддерживаются.
 
